fix(ui5-time-picker, ui5-date-picker): fix top and bottom overflow of the input

--- a/packages/main/src/themes/DatePicker.css
+++ b/packages/main/src/themes/DatePicker.css
@@ -47,6 +47,7 @@
 	line-height: inherit;
 	letter-spacing: inherit;
 	word-spacing: inherit;
+	margin: 0;
 }
 
 :host(:not([disabled]):not([readonly])) .ui5-date-picker-input[focused] {
