--- a/packages/main/test/pages/styles/TimePicker.css
+++ b/packages/main/test/pages/styles/TimePicker.css
@@ -2,6 +2,18 @@ html,body {
     height: 100%;
 }
 
+.samples {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.sample-box-1 {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+
 .timepicker1auto {
     background-color: var(--sapBackgroundColor);
 }
